Wiki: fixed alignment issue of content and loader

--- a/src/components/Guides/Gesture/Gesture.css
+++ b/src/components/Guides/Gesture/Gesture.css
@@ -20,7 +20,6 @@ center{
     width: 100%;
 }
 .content h2{
-    margin-left: 2vh;
     border-bottom: 2px solid #00CCFF;
     text-transform: uppercase;
 }
